ghc-4335c07/testsuite/tests/typecheck/should_fail/T7437.hs
{-# LANGUAGE DefaultSignatures, FlexibleContexts, DeriveGeneric #-}
{-# LANGUAGE FlexibleInstances #-}

module T7437 where

import GHC.Generics

class GPut f where
    gput :: f a -> [()]

class Put a where
    put :: a -> [()]

    default put :: (Generic t, GPut (Rep t)) => t -> [()]
    put = gput . from
